--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,7 @@
   <body>
       <h1>Curso de JavaScript</h1>
       <p>¡Hola Mundo!</p>
+
+      <script src="js/curso.js"></script>
   </body>
 </html>
